--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,22 +1,105 @@
+@font-face {
+  font-family: 'BigBlueTerminal';
+  src: url('/fonts/BigBlueTerminal/BigBlueTermPlusNerdFontMono-Regular.ttf');
+}
+
+* {
+
+  /* Light theme */
+  --main-text-color-light: #0d0d0d;
+  --dim-text-color-light: #646464;
+
+  --main-highlight-color-light: #18ac4d;
+  --dim-highlight-color-light: #0f6c30;
+
+  /* Dark theme */
+  --main-text-color-dark: #f2f2f2;
+  --dim-text-color-dark: #9b9b9b;
+
+  --main-highlight-color-dark: #18ac4d;
+  --dim-highlight-color-dark: #0f6c30;
+}
+
+:root {
+  color-scheme: light;
+  --header-color: var(--main-text-color-light);
+
+  --author-card-name-color: var(--main-highlight-color-light);
+  --author-card-bio-color: var(--dim-text-color-light);
+
+  --post-cards-label: var(--main-text-color-light);
+  --post-card-title-color: var(--main-text-color-light);
+  --post-card-info-color: var(--dim-text-color-light);
+  --post-card-highlight-lighter-color: var(--main-highlight-color-light);
+  --post-card-highlight-darker-color: var(--dim-highlight-color-light);
+
+  --footer-color: var(--main-text-color-light);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+    --header-color: var(--main-text-color-dark);
+
+    --author-card-name-color: var(--main-highlight-color-dark);
+    --author-card-bio-color: var(--dim-text-color-dark);
+
+    --post-cards-label: var(--main-text-color-dark);
+    --post-card-title-color: var(--main-text-color-dark);
+    --post-card-info-color: var(--dim-text-color-dark);
+    --post-card-highlight-darker-color: var(--main-highlight-color-dark);
+    --post-card-highlight-darker-color: var(--dim-highlight-color-dark);
+
+    --footer-color: var(--main-text-color-dark);
+  }
+}
+
+
+
+/* Global effect */
+
 body {
-  color: #222;
-  font-family: sans-serif;
-  line-height: 1.5;
-  margin: 1rem;
-  max-width: 768px;
+  font-family: 'system-ui';
+
+  margin: 0;
+  padding: 0;
 }
 
-header {
-  border-bottom: 1px solid #222;
-  margin-bottom: 1rem;
+.background-container {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width:100%;
+  height:1000px;
+  mask-image: linear-gradient(to  bottom,
+                                  rgba(0, 0, 0, 1.0) 20%, 
+                                  transparent 75%);
 }
 
-footer {
-  border-top: 1px solid #222;
-  margin-top: 1rem;
+.background {
+  height: 100%;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+
+  opacity: 0.2;
 }
 
 a {
-  color: #00e;
+  color: inherit;
   text-decoration: none;
+}
+
+.wrapper {
+  display: flex; 
+  flex-direction: column;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+
+  width: 60%;
 }
