--- a/themes/wings/layouts/_default/list.html
+++ b/themes/wings/layouts/_default/list.html
@@ -1,8 +1,14 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
-  {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+  
+  <section class="post-cards">
+    {{ range site.RegularPages }}
+      {{ partial "post_card.html" . }}
+    {{ end }}
+  </section>
+  <!-- {{ range .Pages }} -->
+  <!--   <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2> -->
+  <!--   {{ .Summary }} -->
+  <!-- {{ end }} -->
 {{ end }}
