--- a/themes/wings/layouts/partials/footer.html
+++ b/themes/wings/layouts/partials/footer.html
@@ -1,1 +1,2 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<p><small>Feito por mim.</small></p>
+<p><small>© {{ now.Year }}.</small></p>
