posts: add first posts

--- a/public/css/color_scheme.css
+++ b/public/css/color_scheme.css
@@ -24,6 +24,7 @@
   --dim-highlight-color-dark: #0f6c30;
 }
 
+/* Ignore below */
 :root {
   color-scheme: light;
   --main-text-color: var(--main-text-color-light);
