--- a/themes/wings/layouts/partials/footer.html
+++ b/themes/wings/layouts/partials/footer.html
@@ -1,2 +1,2 @@
-<p><small>Feito por mim.</small></p>
-<p><small>© {{ now.Year }}.</small></p>
+<p><small>Powered by <a href="https://gohugo.io/">Hugo</a> &amp <a href="https://github.com/icarochiabai/wings">Wings</a></small></p>
+<p><small>© {{ now.Year }} {{ .Site.Title }}</small></p>
