--- a/public/css/author_card.css
+++ b/public/css/author_card.css
@@ -11,8 +11,10 @@
 }
 
 .author-card-profile {
-  max-height: 144px;
-  max-width: 144px;
+  height: 144px;
+  width: 144px;
+
+  object-fit: cover;
   
   border-radius: 50%;
   margin-bottom: 0.5rem;
