--- a/themes/wings/assets/css/baseof.css
+++ b/themes/wings/assets/css/baseof.css
@@ -19,7 +19,7 @@ body {
   left: 0;
 
   width:100%;
-  height:1000px;
+  height:100%;
   mask-image: linear-gradient(to  bottom,
                                   rgba(0, 0, 0, 0.5) 30%, 
                                   transparent 60%);
